--- a/RollingDerby/Config/DefaultEngine.ini
+++ b/RollingDerby/Config/DefaultEngine.ini
@@ -8,12 +8,30 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/RollingBP/Maps/RollingBPExampleMap
+GameInstanceClass=/Game/rollerDerbyGI.rollerDerbyGI_C
+GameDefaultMap=/Game/custom/menu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/RollingBP/Blueprints/RollingGameMode.RollingGameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+GameServerQueryPort=27015
+bRelaunchInSteam=false
+GameVersion=1.0.0.0
+bVACEnabled=0
+bAllowP2PPacketRelay=true
+P2PConnectionTimeout=90
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"﻿
 
 
 [/Script/Engine.Engine]
@@ -73,5 +91,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
