--- a/RollingDerby/Config/DefaultEngine.ini
+++ b/RollingDerby/Config/DefaultEngine.ini
@@ -19,6 +19,7 @@ GlobalDefaultServerGameMode=None
 
 [OnlineSubsystem]
 DefaultPlatformService=Steam
+PollingIntervalInMs=20
 
 [OnlineSubsystemSteam]
 bEnabled=true
@@ -26,7 +27,7 @@ SteamDevAppId=480
 GameServerQueryPort=27015
 bRelaunchInSteam=false
 GameVersion=1.0.0.0
-bVACEnabled=0
+bVACEnabled=1
 bAllowP2PPacketRelay=true
 P2PConnectionTimeout=90
 
