--- a/RollingDerby/RollingDerby.uproject
+++ b/RollingDerby/RollingDerby.uproject
@@ -2,5 +2,12 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.10",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Modules": [
+		{
+			"Name": "RollingDerby",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		}
+	]
 }
