--- a/RollingDerby/RollingDerby.uproject
+++ b/RollingDerby/RollingDerby.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "RollingDerby",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
