fireball klar, börjat med ny karta

--- a/RollingDerby/Config/DefaultGame.ini
+++ b/RollingDerby/Config/DefaultGame.ini
@@ -9,3 +9,7 @@ ProjectID=6F27CE86406A1EBC4776EC8499951591
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="C:/Users/Tobbe/Desktop/RollingDerbyDest")
+
